try to handling inconsistent style and gap of .info-section 1. fix-up the gap between main-nav and info-section 2. setting whatido__skill-list list stlye to none Recall: Margin Collapse issue

--- a/css/main.css
+++ b/css/main.css
@@ -14,35 +14,6 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 300;
 }
 
-.main-nav {
-    background-color: #333;
-    text-align: center;
-    padding: 1px;
-}
-
-.main-nav ul li {
-    display: inline-block;
-    margin: 15px 10px;
-}
-
-.main-nav ul li a {
-    color: #fff;
-    font-size: 0.9rem;
-    font-weight: 300;
-    text-trasform: uppercase;
-    text-decoration: none;
-}
-
-.main-nav ul li a:hover {
-    text-decoration: underline;
-}
-
-.main-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
 .container {
     width: 960px;
     margin: 180px auto;
@@ -74,3 +45,42 @@ h1, h2, h3, h4, h5, h6 {
     color: white;
     text-shadow: 0 1px rgba(0,0,0,0.3);
 }   
+.main-nav {
+    background-color: #333;
+    text-align: center;
+    padding: 1px;
+}
+
+.main-nav ul li {
+    display: inline-block;
+    margin: 15px 10px;
+}
+
+.main-nav ul li a {
+    color: #fff;
+    font-size: 0.9rem;
+    font-weight: 300;
+    text-trasform: uppercase;
+    text-decoration: none;
+}
+
+.main-nav ul li a:hover {
+    text-decoration: underline;
+}
+
+.main-nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.info-section {
+    padding: 1px;
+    background-color: #fff;
+}
+
+.whatido__skill-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+} 
